Batchable and attachment fix. Field additions.

--- a/app-ols-integration/main/default/layouts/Contact-Online Store Customer.layout-meta.xml
+++ b/app-ols-integration/main/default/layouts/Contact-Online Store Customer.layout-meta.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>DataDotComClean</excludeButtons>
-    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -44,6 +42,10 @@
         <editHeading>true</editHeading>
         <label>Customer Information</label>
         <layoutColumns>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Email_Sent__c</field>
+            </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>Email_Bounced__c</field>
