Class Name Update

--- a/app-ols-integration/main/default/layouts/Contact-Online Store Customer.layout-meta.xml
+++ b/app-ols-integration/main/default/layouts/Contact-Online Store Customer.layout-meta.xml
@@ -61,15 +61,15 @@
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>Length_Of_Prior_Coverage__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>Days_Since_End_Of_Prior_Coverage__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>Eligible_For_Waiting_Period_Waiver__c</field>
             </layoutItems>
         </layoutColumns>
@@ -197,7 +197,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3F000005wLMG</masterLabel>
+        <masterLabel>00h54000006ccOf</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
