--- a/app-ols-integration/main/default/layouts/ContentVersion-OLS Brochure Layout.layout-meta.xml
+++ b/app-ols-integration/main/default/layouts/ContentVersion-OLS Brochure Layout.layout-meta.xml
@@ -54,6 +54,10 @@
                 <behavior>Required</behavior>
                 <field>Brochure_Coverage_Start_Date__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Brochure_Inactive__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -98,7 +102,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0R000008irrJ</masterLabel>
+        <masterLabel>00h7g000002CfQW</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
